// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedDashboardPage renders correctly 1`] = `
<DashboardPage
  dispatch={[Function]}
  hasSubjects={false}
  isConfirmed={false}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": [Function],
    }
  }
/>
`;

exports[`UnconnectedDashboardPage renders correctly when \`isConfirmed\` is false 1`] = `
<Segment
  basic={true}
>
  <CustomMessage
    color="none"
    content=""
    header="Please, verify your email to unlock awesomeness"
    type="info"
  />
</Segment>
`;

exports[`UnconnectedDashboardPage when \`isConfirmed\` is true renders correctly when \`hasSubjects\` is false 1`] = `
<Segment
  basic={true}
>
  <CustomMessage
    color="none"
    content=""
    header="Welcome to ListAnything!"
    type="info"
  />
  <AddSubjectCtA />
</Segment>
`;

exports[`UnconnectedDashboardPage when \`isConfirmed\` is true renders correctly when \`hasSubjects\` is true 1`] = `
<Segment
  basic={true}
>
  <CustomMessage
    color="none"
    content=""
    header="Welcome to ListAnything!"
    type="info"
  />
</Segment>
`;
